# project-mariner

./: .env.dev  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/nginx/: Dockerfile  nginx.conf
src/: manage.py  pytest.ini
src/mariner_site/: asgi.py  settings.py  urls.py  wsgi.py
src/permission/: apps.py  models.py  serializer.py  urls.py  views.py
src/permission/migrations/: 0001_initial.py  0002_auto_20230420_0000.py  0003_auto_20230420_0001.py  0004_alter_permission_granted_date.py  0005_alter_permission_granted_date.py  0006_auto_20230420_0105.py
src/tests/functional/user/: test_user_api.py
src/tests/unit/permission/: test_models.py
src/user/: admin.py  models.py  serializer.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_user_birthdate.py
tests/: conftest.py  factories.py
tests/functional/permission/: test_permission_api.py
tests/functional/user/: test_user_api.py
tests/unit/user/: test_models.py
