[tool.poetry]
name = "mariner-devsite"
version = "0.1.0"
description = "Project Demo for Mariner Innovations"
authors = ["Tito"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
django = "3.2.6"
pytest-django = "^4.5.2"
django-filter = "^23.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
